--- a/css/app.css
+++ b/css/app.css
@@ -22,11 +22,23 @@
 	color: rgb(255, 255, 255);
 }
 
-.createForm{
+/*.createForm{
 	padding: 1em;
-}
+}*/
 
 .submitButton{
 	background-color: rgb(51, 122, 183);
 	color: rgb(255, 255, 255);
+}
+
+.recipeCreateModalDialog{
+	width: 90%;
+}
+
+.modal-content {
+	padding: 2em;
+}
+
+.modalSubmitCancel {
+	text-align: center;
 }
