--- a/css/app.css
+++ b/css/app.css
@@ -44,13 +44,13 @@
 }
 
 .saveRecipeButton, .saveRecipeButton:focus, .addRecipeIngredientButton, .addRecipeIngredientButton:focus, .viewRecipeBtn,
-.viewRecipeBtn:focus {
+.viewRecipeBtn:focus, .deleteRecipeBtn, .deleteRecipeBtn:focus {
 	background-color: rgb(51, 122, 183);
 	color: rgb(255, 255, 255);
 }
 
 .recipeActions {
-	text-align: right;
+	text-align: center;
 }
 
 
