--- a/css/app.css
+++ b/css/app.css
@@ -14,7 +14,7 @@
 }
 
 
-#createRecipeBtn{
+#createRecipeBtn, #createIngredientBtn{
 	float: right;
 	margin-bottom: 1em;
 	margin-right: 0em;
@@ -88,9 +88,9 @@ option.disabled {
 
 #pageAlert, #modalAlert {
 	position: fixed;
-	width: 20%;
+	width: 24%;
 	top: 2%;
-	left: 40%;
+	left: 38%;
 	color: black;
 	z-index: 99;	
 }
