-Change 'entity classes' to 'interface classes' because that is essentially what they were being used for -Add new 'entity classes' -Change code to accomodate new structure -Begin weeklyMenu implementation

--- a/css/app.css
+++ b/css/app.css
@@ -43,18 +43,21 @@
 	text-align: center;
 }
 
-.viewRecipeBtn, .viewRecipeBtn:focus, .deleteRecipeBtn, .deleteRecipeBtn:focus, .editRecipeBtn, .editRecipeBtn:focus {
+.viewRecipeBtn, .viewRecipeBtn:focus, .deleteRecipeBtn, .deleteRecipeBtn:focus, .editRecipeBtn, .editRecipeBtn:focus, 
+  .deleteIngredientBtn, .deleteIngredientBtn:focus {
 	background-color: rgb(51, 122, 183);
 	color: rgb(255, 255, 255);
-	width: 100%;
+	float: right;
+	width: 70%;
 }
 
-.saveRecipeButton, .saveRecipeButton:focus, .addRecipeIngredientButton, .addRecipeIngredientButton:focus {
+.saveRecipeButton, .saveRecipeButton:focus, .addRecipeIngredientButton, .addRecipeIngredientButton:focus,
+  .updateRecipeIngredientButton, .updateRecipeIngredientButton:focus, .deleteRecipeIngredientButton, .deleteRecipeIngredientButton:focus {
 	background-color: rgb(51, 122, 183);
 	color: rgb(255, 255, 255);
 }
 
-.recipeActions {
+.recipeActions, .ingredientActions {
 	text-align: center;
 }
 
